testdata/baselines/reference/submodule/conformance/moduleExportsAliasLoop2.errors.txt
x.js(2,1): error TS2304: Cannot find name 'exports'.
x.js(3,1): error TS2304: Cannot find name 'exports'.


==== x.js (2 errors) ====
    const Foo = { min: 3 };
    exports.fn1();
    ~~~~~~~
!!! error TS2304: Cannot find name 'exports'.
    exports.fn2 = Foo.min;
    ~~~~~~~
!!! error TS2304: Cannot find name 'exports'.
    